[gd_scene load_steps=6 format=3 uid="uid://cls10jofsy2mq"]

[ext_resource type="Script" path="res://scenes/game_over_menu.gd" id="1_7j0f0"]
[ext_resource type="Shader" path="res://shaders/pause_menu.gdshader" id="2_6mg6m"]
[ext_resource type="FontFile" uid="uid://1yuy1o07mph2" path="res://assets/fonts/URW Grotesk SC Regular.ttf" id="3_urfns"]
[ext_resource type="FontFile" uid="uid://c7av1j5mjwa37" path="res://assets/fonts/URW Grotesk SC Light.ttf" id="4_gqmfv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hxx2w"]
shader = ExtResource("2_6mg6m")
shader_parameter/amount = 2.0

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7j0f0")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_hxx2w")
use_parent_material = true
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.294118, 0.294118, 0.294118, 0.670588)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TheGameIsPaused" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_urfns")
theme_override_font_sizes/font_size = 36
text = "PROCESS: TERMINATED"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_gqmfv")
theme_override_font_sizes/font_size = 20
text = "You failed."
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="TryAgain" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Try again"

[node name="GiveUp" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Give up"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/GiveUp" to="." method="_on_give_up_pressed"]
